infra/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-service
  template:
    metadata:
      labels:
        app: backend-service
    spec:
      containers:
      - name: backend-service
        image: ghcr.io/i-went-ru/backend:fd43378c7d39ecdf43aa4b0e666ba41b99cbd111
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        env:
          - name: DATABASE_URL
            valueFrom:
              secretKeyRef:
                name: database
                key: host
          - name: SECRET_KEY
            valueFrom:
              secretKeyRef:
                name: backend
                key: key
          - name: DEBUG
            value: "false"
        ports:
        - containerPort: 8000
